@@ -14,7 +14,6 @@ import it.pagopa.pn.deliverypush.service.mapper.SmartMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class EntityToDtoTimelineMapper {
@@ -40,7 +39,7 @@ public class EntityToDtoTimelineMapper {
         List<LegalFactsIdInt> legalFactsIds = null;
         
         if (entity != null){
-            legalFactsIds = entity.stream().map( this::mapOneLegalFact ).collect(Collectors.toList());
+            legalFactsIds = entity.stream().map( this::mapOneLegalFact ).toList();
         }
         
         return legalFactsIds;
