@@ -267,14 +267,14 @@ public class TimeLineServiceImpl implements TimelineService {
 
         List<TimelineElement> timelineList = timelineElements.stream()
                 .map(TimelineElementMapper::internalToExternal)
-                .collect(Collectors.toList());
+                .toList();
 
         return NotificationHistoryResponse.builder()
                 .timeline(timelineList)
                 .notificationStatusHistory(
                         statusHistory.stream().map(
                                 NotificationStatusHistoryElementMapper::internalToExternal
-                        ).collect(Collectors.toList())
+                        ).toList()
                 )
                 .notificationStatus(currentStatus != null ? NotificationStatus.valueOf(currentStatus.getValue()) : null)
                 .build();
@@ -292,33 +292,33 @@ public class TimeLineServiceImpl implements TimelineService {
     public void enrichTimelineElementWithConfidentialInformation(TimelineElementDetailsInt details,
                                                                  ConfidentialTimelineElementDtoInt confidentialDto) {
 
-        if (details instanceof CourtesyAddressRelatedTimelineElement && confidentialDto.getDigitalAddress() != null) {
-            CourtesyDigitalAddressInt address = ((CourtesyAddressRelatedTimelineElement) details).getDigitalAddress();
+        if (details instanceof CourtesyAddressRelatedTimelineElement courtesyAddressRelatedTimelineElement && confidentialDto.getDigitalAddress() != null) {
+            CourtesyDigitalAddressInt address = courtesyAddressRelatedTimelineElement.getDigitalAddress();
 
             address = getCourtesyDigitalAddress(confidentialDto, address);
             ((CourtesyAddressRelatedTimelineElement) details).setDigitalAddress(address);
         }
 
-        if (details instanceof DigitalAddressRelatedTimelineElement && confidentialDto.getDigitalAddress() != null) {
+        if (details instanceof DigitalAddressRelatedTimelineElement digitalAddressRelatedTimelineElement && confidentialDto.getDigitalAddress() != null) {
 
-            LegalDigitalAddressInt address = ((DigitalAddressRelatedTimelineElement) details).getDigitalAddress();
+            LegalDigitalAddressInt address = digitalAddressRelatedTimelineElement.getDigitalAddress();
 
             address = getDigitalAddress(confidentialDto, address);
 
             ((DigitalAddressRelatedTimelineElement) details).setDigitalAddress(address);
         }
 
-        if (details instanceof PhysicalAddressRelatedTimelineElement && confidentialDto.getPhysicalAddress() != null) {
-            PhysicalAddressInt physicalAddress = ((PhysicalAddressRelatedTimelineElement) details).getPhysicalAddress();
+        if (details instanceof PhysicalAddressRelatedTimelineElement physicalAddressRelatedTimelineElement && confidentialDto.getPhysicalAddress() != null) {
+            PhysicalAddressInt physicalAddress = physicalAddressRelatedTimelineElement.getPhysicalAddress();
 
             physicalAddress = getPhysicalAddress(physicalAddress, confidentialDto.getPhysicalAddress());
 
             ((PhysicalAddressRelatedTimelineElement) details).setPhysicalAddress(physicalAddress);
         }
 
-        if (details instanceof NewAddressRelatedTimelineElement && confidentialDto.getNewPhysicalAddress() != null) {
+        if (details instanceof NewAddressRelatedTimelineElement newAddressRelatedTimelineElement && confidentialDto.getNewPhysicalAddress() != null) {
 
-            PhysicalAddressInt newAddress = ((NewAddressRelatedTimelineElement) details).getNewAddress();
+            PhysicalAddressInt newAddress = newAddressRelatedTimelineElement.getNewAddress();
 
             newAddress = getPhysicalAddress(newAddress, confidentialDto.getNewPhysicalAddress());
 
